--- a/entry-1.html
+++ b/entry-1.html
@@ -13,7 +13,7 @@
      <h2>by Evelyn Yoon</h2>
      <p>This is my first web page.</p>
      <footer>
-        <p>© 2023 Harmonic Collection</p>
+        <p>&copy; 2023 Harmonic Collection</p>
      </footer>
    </body>
  </html>
