--- a/entry-1.html
+++ b/entry-1.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
  <html>
    <head>
-     <title>Hello, world!</title>
+     <title>Harmonic Collection Entry 1</title>
    </head>
    <body>
+    <!-- 
+        In this collection, the first topic, "How to relieve stress effectively," addresses how people nowadays face a lot of stress in their lives due to various factors. Through this topic, I aim to provide people with simple and effective ways to reduce stress. So, I will introduce several methods to reduce stress, displaying only the keywords on the website initially. When users click on these keywords, detailed explanations will be provided.
+        The next topic is "Songs that are good to listen to while working out." I usually enjoy exercising while listening to music. I find that my choice of music varies depending on my mood, and searching for suitable songs every time can be quite challenging. Therefore, I want to create a website where users can easily access different playlists based on their mood for that day.
+        The final topic is "Healthy habits." I want to present easily understandable information about common healthy habits that people can incorporate into their daily lives. Health is a trending topic nowadays, and given our busy routines, people need straightforward and accessible information on adopting healthy habits. I plan to create a website with icons or keywords that users can click on to access detailed information.
+    -->
      <h1>Hello, world!</h1>
+     <h2>by Evelyn Yoon</h2>
      <p>This is my first web page.</p>
+     <footer>
+        <p>&copy; 2023 Harmonic Collection</p>
+     </footer>
    </body>
  </html>
