--- a/entry-1.html
+++ b/entry-1.html
@@ -14,8 +14,13 @@
 
      <h3>Welcome to my website!</h3>
 
-     <p>This is my first web page.</p>
-     
+     <h2>Collections</h2>
+     <ul>
+      <li>How to ...</li>
+      <li>Songs that are ...</li>
+      <li>Healthy Habits</li>
+     </ul>
+
      <footer>
         <p>&copy; 2023 Harmonic Collection</p>
      </footer>
