--- a/entry-1.html
+++ b/entry-1.html
@@ -13,13 +13,23 @@
      <h2>by Evelyn Yoon</h2>
 
      <h3>Welcome to my website!</h3>
+     
+     <h2>About the Project</h2>
+     <p>My harmonic collection!</p>
 
      <h2>Collections</h2>
      <ul>
-      <li>How to ...</li>
-      <li>Songs that are ...</li>
+      <li>How to relieve stress effectively</li>
+      <li>Songs that are good to listen to while working out</li>
       <li>Healthy Habits</li>
      </ul>
+
+     <h3>What's on your mind?</h3>
+     <form action="/action_page.php">
+      <label for="thought"></label>
+      <input type="text" id="thought" name="thought"><br><br>
+      <input type="submit" value="Submit">
+    </form>
 
      <footer>
         <p>&copy; 2023 Harmonic Collection</p>
