--- a/entry-1.html
+++ b/entry-1.html
@@ -12,12 +12,10 @@
      <h1>Ways to Improve Quality of Life</h1>
      <h2>by Evelyn Yoon</h2>
 
-     <h3>Welcome to my website!</h3>
+     <h3>Welcome to my website!</h3><br>
      
      <h2>About the Project</h2>
      <p>My harmonic collection!</p>
-
-     <hr>
 
      <h2>Collections</h2>
      <ul>
@@ -25,6 +23,8 @@
       <li>Songs that are good to listen to while working out</li>
       <li>Healthy Habits</li>
      </ul>
+
+     <hr>
 
      <h3>What's on your mind?</h3>
      <form action="/action_page.php">
