--- a/entry-1.html
+++ b/entry-1.html
@@ -35,6 +35,7 @@
 
      <footer>
         <p>&copy; 2023 Harmonic Collection</p>
+        <p>Core 1: Interaction</p>
      </footer>
    </body>
  </html>
