--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
      <h2>Collections</h2>
      <ul>
-      <li>How to relieve stress effectively</li>
+      <li>How to relieve aaastress effectively</li>
       <li>Songs that are good to listen to while working out</li>
       <li>Healthy Habits</li>
      </ul>
