--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
 
      <h2>Collections</h2>
      <ul>
-      <li>How to relieve aaastress effectively</li>
+      <li>How to relieve stress effectively</li>
       <li>Songs that are good to listen to while working out</li>
       <li>Healthy Habits</li>
      </ul>
 
+     <hr>
+     <hr>
      <hr>
 
      <h3>What's on your mind?</h3>
