--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <h3>Welcome to my website!</h3><br>
      
      <h2>About the Project</h2>
-     <p>My harmonic collection!</p>
+     <p>My harmonic collection!</p><br>
 
      <h2>Collections</h2>
      <ul>
