--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         The next topic is "Songs that are good to listen to while working out." I usually enjoy exercising while listening to music. I find that my choice of music varies depending on my mood, and searching for suitable songs every time can be quite challenging. Therefore, I want to create a website where users can easily access different playlists based on their mood for that day.
         The final topic is "Healthy habits." I want to present easily understandable information about common healthy habits that people can incorporate into their daily lives. Health is a trending topic nowadays, and given our busy routines, people need straightforward and accessible information on adopting healthy habits. I plan to create a website with icons or keywords that users can click on to access detailed information.
     -->
-     <h1>Ways to Improve Quality of Life</h1>
-     <h2>by Evelyn Yoon</h2>
+     <h1>Ways to Improve Quality of Life by Evelyn Yoon</h1>
 
      <h3>Welcome to my website!</h3><br>
      
