--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
      <p>My harmonic collection!</p><br>
 
      <h2>Collections</h2>
-     <ul>
-      <li>How to relieve stress effectively</li>
+     <ul> <!-- unordered list -->
+      <li>How to relieve stress effectively</li> <!-- list item-->
       <li>Songs that are good to listen to while working out</li>
       <li>Healthy Habits</li>
+      <li><a href="entry-1/index.html">Entry 1</a>
+        <a href="entry-2/index.html">Entry 2</a>
+      </li>
      </ul>
 
      <hr>
