entry-2 created & finished

--- a/entry-2/index.html
+++ b/entry-2/index.html
@@ -10,25 +10,40 @@
         The next topic is "Songs that are good to listen to while working out." I usually enjoy exercising while listening to music. I find that my choice of music varies depending on my mood, and searching for suitable songs every time can be quite challenging. Therefore, I want to create a website where users can easily access different playlists based on their mood for that day.
         The final topic is "Healthy habits." I want to present easily understandable information about common healthy habits that people can incorporate into their daily lives. Health is a trending topic nowadays, and given our busy routines, people need straightforward and accessible information on adopting healthy habits. I plan to create a website with icons or keywords that users can click on to access detailed information.
     -->
-     <h1>Ways to Improve Quality of Life</h1>
-     <h2>by Evelyn Yoon</h2>
+     <h1><strong>Ways to Improve Quality of Life</strong> <small>by Evelyn Yoon</small></h1>
 
      <h3>Welcome to my website!</h3><br>
      
      <h2>About the Project</h2>
-     <p>My harmonic collection!</p><br>
+     <p>My harmonic collection!</p>
+
+     <details>
+      <summary>Expand</summary>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../entry-1/index.html">Entry 1</a></li>
+        <li><a href="../entry-2/index.html">Entry 2</a></li>
+      </ul>
+     </details>
+     <br><br><br>
 
      <h2>Collections</h2>
+     <style>
+      ul {
+          list-style-image: url('heart-emoji.png');
+      }
+     </style>
+
      <ul>
-      <li>How to relieve stress effectively</li>
-      <li>Songs that are good to listen to while working out</li>
-      <li>Healthy Habits</li>
+      <li><a href="../c1.html">How to relieve stress effectively</a></li> <!-- list item-->
+      <li><a href="../c2.html">Songs that are good to listen to while working out</a></li>
+      <li><a href="../c3.html">Healthy Habits</a></li>
      </ul>
 
-     <hr>
+     <br><br><br><hr>
 
 
-     <h3>What's on your mind?</h3>
+     <h3 style="font-family: 'Times New Roman', Times, serif;">What's on your mind?</h3>
      <form action="/action_page.php">
       <label for="thought"></label>
       <input type="text" id="thought" name="thought"><br><br>
