--- a/index.html
+++ b/index.html
@@ -14,16 +14,22 @@
      <h3>Welcome to my website!</h3><br>
      
      <h2>About the Project</h2>
-     <p>My harmonic collection!</p><br>
+     <p>My harmonic collection!</p>
+
+     <details>
+      <summary>Expand</summary>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="entry-1/index.html">Entry 1</a></li>
+        <li><a href="entry-2/index.html">Entry 2</a></li>
+      </ul>
+     </details>
 
      <h2>Collections</h2>
      <ul> <!-- unordered list -->
-      <li>How to relieve stress effectively</li> <!-- list item-->
-      <li>Songs that are good to listen to while working out</li>
-      <li>Healthy Habits</li>
-      <li><a href="entry-1/index.html">Entry 1</a>
-        <a href="entry-2/index.html">Entry 2</a>
-      </li>
+      <li><a href="c1.html">How to relieve stress effectively</a></li> <!-- list item-->
+      <li><a href="c2.html">Songs that are good to listen to while working out</a></li>
+      <li><a href="c3.html">Healthy Habits</a></li>
      </ul>
 
      <hr>
