--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="entry-1/index.html">Entry 1</a></li>
         <li><a href="entry-2/index.html">Entry 2</a></li>
+        <li><a href="entry-3/index.html">Entry 3</a></li>
       </ul>
      </details>
 
      <h2>Collections</h2>
      <ul> <!-- unordered list -->
-      <li><a href="c1.html">How to relieve stress effectively</a></li> <!-- list item-->
+      <li><a href="how-to-relieve-stress-effectively/index.html">How to relieve stress effectively</a></li> <!-- list item-->
       <li><a href="c2.html">Songs that are good to listen to while working out</a></li>
       <li><a href="c3.html">Healthy Habits</a></li>
      </ul>
