--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
         <li><a href="entry-1/index.html">Entry 1</a></li>
         <li><a href="entry-2/index.html">Entry 2</a></li>
         <li><a href="entry-3/index.html">Entry 3</a></li>
+        <li><a href="entry-4/index.html">Entry 4</a></li>
       </ul>
      </details>
 
      <h2>Collections</h2>
      <ul> <!-- unordered list -->
       <li><a href="how-to-relieve-stress-effectively/index.html">How to relieve stress effectively</a></li> <!-- list item-->
-      <li><a href="c2.html">Songs that are good to listen to while working out</a></li>
-      <li><a href="c3.html">Healthy Habits</a></li>
+      <li><a href="song/index.html">Songs that are good to listen to while working out</a></li>
+      <li><a href="healthy-habits/index.html">Healthy Habits</a></li>
      </ul>
 
      <hr>
