--- a/healthy-habits/index.html
+++ b/healthy-habits/index.html
@@ -31,22 +31,22 @@
         </ul>
       </details>
     </div>
-    <div class="image-container" style="bottom: 80%; left: 83.333%;">
+    <div class="image-container" style="left: 83.333%;">
       <img src="Adequate Rest.jpg">
     </div>
-    <div class="image-container" style="bottom: 80%; left: 66.667%;">
+    <div class="image-container" style="left: 66.667%;">
       <img src="Balanced Diet.png">
     </div>
-    <div class="image-container" style="bottom: 40%; left: 50%;">
+    <div class="image-container" style="left: 50%;">
       <img src="Handwashing.jpg">
     </div>
-    <div class="image-container" style="bottom: 60%; left: 33.333%;">
+    <div class="image-container" style="left: 33.333%;">
       <img src="Hydration.jpg">
     </div>
-    <div class="image-container" style="bottom: 80%; left: 16.667%">
+    <div class="image-container" style="left: 16.667%">
       <img src="Regular Exercise.png">
     </div>
-    <div class="image-container" style="bottom: 100%; left: 0%">
+    <div class="image-container" style="left: 0%">
       <img src="Social Interaction.jpg">
     </div>
   </body>
