--- a/how-to-relieve-stress-effectively/index.html
+++ b/how-to-relieve-stress-effectively/index.html
@@ -31,22 +31,22 @@
         </ul>
       </details>
     </div>
-    <div class="image-container" style="bottom: 80%; left: 0%;">
+    <div class="image-container" style="left: 0%;">
       <img src="work-out.jpg">
     </div>
-    <div class="image-container" style="bottom: 80%; left: 16.667%;">
+    <div class="image-container" style="left: 16.667%;">
       <img src="reading-books.jpg">
     </div>
-    <div class="image-container" style="bottom: 40%; left: 33.333%;">
+    <div class="image-container" style="left: 33.333%;">
       <img src="meditation.jpg">
     </div>
-    <div class="image-container" style="bottom: 60%; left: 50%;">
+    <div class="image-container" style="left: 50%;">
       <img src="listening-to-music.jpg">
     </div>
-    <div class="image-container" style="bottom: 80%; left: 66.667%">
+    <div class="image-container" style="left: 66.667%">
       <img src="watching-movies.jpg">
     </div>
-    <div class="image-container" style="bottom: 100%; left: 83.333%">
+    <div class="image-container" style="left: 83.333%">
       <img src="cooking.jpg">
     </div>
   </body>
