--- a/song/index.html
+++ b/song/index.html
@@ -29,7 +29,9 @@
         </ul>
       </details>
     </div>
-        <img style="display: block; margin-left: auto; margin-right: auto;" src="Hip-Hop.jpg">
+    <div>
+      <img style="display: block; margin-left: auto; margin-right: auto;" src="Hip-Hop.jpg">
+    </div>
     <div>
         <img style="margin-left: 10%;" src="JAzz.jpg">
         <img style="margin-right: 10%;" align="right" src="pop.jpg">
