--- a/entry-4/index.html
+++ b/entry-4/index.html
@@ -19,6 +19,7 @@
         <li><a href="../entry-1/index.html">Entry 1</a></li>
         <li><a href="../entry-2/index.html">Entry 2</a></li>
         <li><a href="../entry-3/index.html">Entry 3</a></li>
+        <li><a href="./index.html">Entry 4</a></li>
       </ul>
      </details>
      <br><br><br>
