--- a/entry-1/index.html
+++ b/entry-1/index.html
@@ -10,7 +10,7 @@
         The final topic is "Healthy habits." I want to present easily understandable information about common healthy habits that people can incorporate into their daily lives. Health is a trending topic nowadays, and given our busy routines, people need straightforward and accessible information on adopting healthy habits. I plan to create a website with icons or keywords that users can click on to access detailed information.
     -->
      <h1>Ways to Improve Quality of Life</h1>
-     <h2>by Evelyn Yoon</h2>
+     <h2><em>by Evelyn Yoon</em></h2>
 
      <h3>Welcome to my website!</h3><br>
      
