entries 2, 3, 4 are edited accordingly to their respective versions

--- a/entry-3/how-to-relieve-stress-effectively/index.html
+++ b/entry-3/how-to-relieve-stress-effectively/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>How to relieve stress effectively</title>
-    <link href="../assets/reset.css" rel="stylesheet" type="text/css">
-    <link href="../assets/main.css" rel="stylesheet">
+    <link href="../../assets/reset.css" rel="stylesheet" type="text/css">
+    <link href="../../assets/main.css" rel="stylesheet">
     <style>
       h1 {
         font-family: Chalkduster, fantasy;
@@ -31,22 +31,22 @@
         </ul>
       </details>
     </div>
-    <div class="image-container" style="left: 0%;">
+    <div>
       <img src="work-out.jpg">
     </div>
-    <div class="image-container" style="left: 16.667%;">
+    <div>
       <img src="reading-books.jpg">
     </div>
-    <div class="image-container" style="left: 33.333%;">
+    <div>
       <img src="meditation.jpg">
     </div>
-    <div class="image-container" style="left: 50%;">
+    <div>
       <img src="listening-to-music.jpg">
     </div>
-    <div class="image-container" style="left: 66.667%">
+    <div>
       <img src="watching-movies.jpg">
     </div>
-    <div class="image-container" style="left: 83.333%">
+    <div>
       <img src="cooking.jpg">
     </div>
   </body>
