--- a/entry-3/index.html
+++ b/entry-3/index.html
@@ -25,9 +25,9 @@
      <h2>Collections</h2>
 
      <ul>
-      <li><a href="../how-to-relieve-stress-effectively/index.html">How to relieve stress effectively</a></li> <!-- list item-->
-      <li><a href="../c2.html">Songs that are good to listen to while working out</a></li>
-      <li><a href="../c3.html">Healthy Habits</a></li>
+      <li><a href="how-to-relieve-stress-effectively/index.html">How to relieve stress effectively</a></li> <!-- list item-->
+      <li><a href="../entry-2/c2.html">Songs that are good to listen to while working out</a></li>
+      <li><a href="../entry-2/c3.html">Healthy Habits</a></li>
      </ul>
 
      <br><br><br><hr>
