--- a/entry-4/healthy-habits/index.html
+++ b/entry-4/healthy-habits/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Healthy Habits</title>
-    <link href="../assets/reset.css" rel="stylesheet" type="text/css">
-    <link href="../assets/main.css" rel="stylesheet">
+    <link href="../../assets/reset.css" rel="stylesheet" type="text/css">
+    <link href="../../assets/main.css" rel="stylesheet">
     <style>
       h1 {
         font-family: Chalkduster, fantasy;
