--- a/entry-2/index.html
+++ b/entry-2/index.html
@@ -35,9 +35,9 @@
      </style>
 
      <ul>
-      <li><a href="../c1.html">How to relieve stress effectively</a></li> <!-- list item-->
-      <li><a href="../c2.html">Songs that are good to listen to while working out</a></li>
-      <li><a href="../c3.html">Healthy Habits</a></li>
+      <li><a href="c1.html">How to relieve stress effectively</a></li> <!-- list item-->
+      <li><a href="c2.html">Songs that are good to listen to while working out</a></li>
+      <li><a href="c3.html">Healthy Habits</a></li>
      </ul>
 
      <br><br><br><hr>
