--- a/entry-4/index.html
+++ b/entry-4/index.html
@@ -27,9 +27,9 @@
      <h2>Collections</h2>
 
      <ul>
-      <li><a href="../how-to-relieve-stress-effectively/index.html">How to relieve stress effectively</a></li> <!-- list item-->
-      <li><a href="../song/index.html">Songs that are good to listen to while working out</a></li>
-      <li><a href="../healthy-habits/index.html">Healthy Habits</a></li>
+      <li><a href="how-to-relieve-stress-effectively/index.html">How to relieve stress effectively</a></li> <!-- list item-->
+      <li><a href="song/index.html">Songs that are good to listen to while working out</a></li>
+      <li><a href="healthy-habits/index.html">Healthy Habits</a></li>
      </ul>
 
      <br><br><br><hr>
