--- a/entry-5/healthy-habits/index.html
+++ b/entry-5/healthy-habits/index.html
@@ -16,10 +16,10 @@
       }
       aside {
         float: left;
-        border: solid rgb(0, 0, 0) 1px;
+        border: solid rgb(13, 68, 40) 1px;
 	      background-color: rgb(35, 169, 179);
         font-family: 'Courier New', Courier, monospace;
-        color: aquamarine;
+        color: rgb(139, 228, 199);
       }
       div:nth-child(5) aside{
         float: right;
@@ -46,25 +46,25 @@
     <div class="image-container" style="left: 50%;">
       <img src="Adequate Rest.jpg">
       <aside>
-        Choose the Right Book Select books that interest you and are in line with your reading preferences. Fiction, non-fiction, self-help, or even poetry—choose what you enjoy the most. Slow Reading Don't rush through the pages. Read at a comfortable pace, savoring each word. This mindful reading can be meditative and calming.
+        Physical Health: Sleep and rest play a crucial role in physical health. During rest, the body undergoes repair and maintenance processes. This includes tissue growth and repair, immune system support, and the release of hormones that regulate growth, stress, and appetite. Without adequate rest, these processes can be disrupted, leading to health issues.
       </aside>
     </div>
     <div class="image-container" style="left: 25%;">
       <img src="Balanced Diet.png">
       <aside>
-        Choose the Right Book Select books that interest you and are in line with your reading preferences. Fiction, non-fiction, self-help, or even poetry—choose what you enjoy the most. Slow Reading Don't rush through the pages. Read at a comfortable pace, savoring each word. This mindful reading can be meditative and calming.
+        Nutrient Intake: A balanced diet provides a wide variety of essential nutrients, including vitamins, minerals, carbohydrates, proteins, fats, and fiber. These nutrients are necessary for the proper functioning of the body and are involved in various metabolic processes.
       </aside>
     </div>
     <div class="image-container" style="left: 25%">
       <img src="Regular Exercise.png">
       <aside>
-        Choose the Right Book Select books that interest you and are in line with your reading preferences. Fiction, non-fiction, self-help, or even poetry—choose what you enjoy the most. Slow Reading Don't rush through the pages. Read at a comfortable pace, savoring each word. This mindful reading can be meditative and calming.
+        Physical Health: Exercise helps improve cardiovascular health by strengthening the heart and improving circulation. It can reduce the risk of heart disease, high blood pressure, and stroke. Weight Management: Regular physical activity can help with weight control and weight loss by burning calories and increasing metabolic rate. It's essential for maintaining a healthy body weight.
       </aside>
     </div>
     <div class="image-container" style="left: 0%">
       <img src="Social Interaction.jpg">
       <aside>
-        Choose the Right Book Select books that interest you and are in line with your reading preferences. Fiction, non-fiction, self-help, or even poetry—choose what you enjoy the most. Slow Reading Don't rush through the pages. Read at a comfortable pace, savoring each word. This mindful reading can be meditative and calming.
+        Emotional Support: Social interactions provide emotional support by offering a network of friends, family members, and acquaintances who can lend a listening ear, offer advice, and provide comfort during challenging times. Sharing your feelings with others can reduce feelings of loneliness and stress.
       </aside>
     </div>
   </body>
