--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
      <h2>Collections</h2>
      <ul> <!-- unordered list -->
-      <li><a href="how-to-relieve-stress-effectively/index.html">How to relieve stress effectively</a></li> <!-- list item-->
-      <li><a href="song/index.html">Songs that are good to listen to while working out</a></li>
-      <li><a href="healthy-habits/index.html">Healthy Habits</a></li>
+      <li><a href="entry-5/how-to-relieve-stress-effectively/index.html">How to relieve stress effectively</a></li> <!-- list item-->
+      <li><a href="entry-5/song/index.html">Songs that are good to listen to while working out</a></li>
+      <li><a href="entry-5/healthy-habits/index.html">Healthy Habits</a></li>
      </ul>
 
      <hr>
