--- a/entry-5/how-to-relieve-stress-effectively/index.html
+++ b/entry-5/how-to-relieve-stress-effectively/index.html
@@ -16,10 +16,10 @@
       }
       aside {
         float: right;
-        border: solid rgb(0, 0, 0) 1px;
-	      background-color: rgb(243, 121, 223);
+        border: solid rgb(239, 52, 52) 1px;
+	      background-color: rgb(237, 106, 216);
         font-family: 'Times New Roman', Times, serif;
-        color: red;
+        color: rgb(136, 14, 14);
       }
       div:nth-child(5) aside{
         float: left;
@@ -45,25 +45,28 @@
     <div class="image-container" style="left: 0%;">
       <img src="reading-books.jpg">
       <aside>
-        Choose the Right Book Select books that interest you and are in line with your reading preferences. Fiction, non-fiction, self-help, or even poetry—choose what you enjoy the most. Slow Reading Don't rush through the pages. Read at a comfortable pace, savoring each word. This mindful reading can be meditative and calming.
-      </aside>
+        Choose the Right Book: Select books that interest you and are in line with your reading preferences. Fiction, non-fiction, self-help, or even poetry—choose what you enjoy the most.
+Slow Reading: Don't rush through the pages. Read at a comfortable pace, savoring each word. This mindful reading can be meditative and calming.
+    </aside>
     </div>
     <div class="image-container" style="left: 25%;">
       <img src="meditation.jpg">
       <aside>
-        Choose the Right Book Select books that interest you and are in line with your reading preferences. Fiction, non-fiction, self-help, or even poetry—choose what you enjoy the most. Slow Reading Don't rush through the pages. Read at a comfortable pace, savoring each word. This mindful reading can be meditative and calming.
+        Mental Calm: Meditation can calm the mind and reduce internal emotional anxiety. It enhances skills for observing and managing emotions during stressful situations.
+Positive Mindset: Meditation promotes a positive mindset and boosts self-confidence. This can help maintain a positive attitude even in stressful situations.
       </aside>
     </div>
     <div class="image-container" style="left: 25%">
       <img src="watching-movies.jpg">
       <aside>
-        Choose the Right Book Select books that interest you and are in line with your reading preferences. Fiction, non-fiction, self-help, or even poetry—choose what you enjoy the most. Slow Reading Don't rush through the pages. Read at a comfortable pace, savoring each word. This mindful reading can be meditative and calming.
+        Choose the Right Movie: Select a movie genre that you find relaxing or enjoyable. Whether it's a comedy, a heartwarming drama, a feel-good romance, or an action-packed adventure, pick something that suits your mood.
+Snacks and Drinks: Prepare some of your favorite snacks and beverages to enjoy while watching the movie. This can enhance the overall experience and make it feel like a treat.
       </aside>
     </div>
     <div class="image-container" style="left: 50%">
       <img src="cooking.jpg">
       <aside>
-        Choose the Right Book Select books that interest you and are in line with your reading preferences. Fiction, non-fiction, self-help, or even poetry—choose what you enjoy the most. Slow Reading Don't rush through the pages. Read at a comfortable pace, savoring each word. This mindful reading can be meditative and calming.
+        Plan Your Meal: Start by planning a meal or dish you enjoy or have been wanting to try. Choose something that suits your taste and dietary preferences. Cook Something Comforting: Consider making comfort food that you associate with positive emotions and nostalgia. Cooking dishes from your cultural background can be especially comforting.
       </aside>
     </div>
   </body>
