--- a/entry-3/index.html
+++ b/entry-3/index.html
@@ -1,48 +1,85 @@
 <!DOCTYPE html>
  <html>
    <head>
-     <title>Harmonic Collection Entry 3</title>
+     <title>How to relieve stress effectively</title>
+     <link href="../assets/reset.css" rel="stylesheet" type="text/css">
      <link href="../assets/main.css" rel="stylesheet">
+     <style>
+      :root {
+        --background-color: lightgreen;
+        --border-color: green;
+      }
+      body {
+        background-image: url(../assets/Meditating.png);
+      }
+      h1 {
+        background-color: var(--background-color);
+        border-color: var(--border-color);
+        border-width: 10px;
+      }
+      ol li{
+        font-size: 30px;
+      }
+      div:nth-child(2) {
+        background-color: var(--background-color);
+	      border-color: var(--border-color);
+      }
+      a:link {
+        color: var(--border-color);
+      }
+      div:nth-child(4) {
+        padding-left: 30px;
+      }
+      div:nth-child(5) {
+        position: absolute;
+        top: 700px;
+        left: 200px;
+        width: 100px;
+        height: 76px;
+      }
+      div:nth-child(6) {
+        position: absolute;
+        top: 450px;
+        right: 900px;
+        width: 100px;
+        height: 76px;
+      }
+      div:nth-child(7) {
+        position: absolute;
+        top: 150px;
+        right: 400px;
+        width: 100px;
+        height: 76px;
+      }
+      img {
+        height: 100%;
+        width: 100%;
+      }
+     </style>
    </head>
    <body>
-     <h1><strong>Ways to Improve Quality of Life</strong> <small>by Evelyn Yoon</small></h1>
-
-     <h3>Welcome to my website!</h3><br>
-     
-     <h2>About the Project</h2>
-     <p>My harmonic collection!</p>
-
-     <details>
-      <summary>Expand</summary>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../entry-1/index.html">Entry 1</a></li>
-        <li><a href="../entry-2/index.html">Entry 2</a></li>
-      </ul>
-     </details>
-     <br><br><br>
-
-     <h2>Collections</h2>
-
-     <ul>
-      <li><a href="how-to-relieve-stress-effectively/index.html">How to relieve stress effectively</a></li> <!-- list item-->
-      <li><a href="../entry-2/c2.html">Songs that are good to listen to while working out</a></li>
-      <li><a href="../entry-2/c3.html">Healthy Habits</a></li>
-     </ul>
-
-     <br><br><br><hr>
-
-
-     <h3 style="font-family: 'Times New Roman', Times, serif;">What's on your mind?</h3>
-     <form action="/action_page.php">
-      <label for="thought"></label>
-      <input type="text" id="thought" name="thought"><br><br>
-      <input type="submit" value="Submit">
-    </form>
-
-     <footer>
-        <p>&copy; 2023 Harmonic Collection</p>
-        <p>Core 1: Interaction</p>
-     </footer>
+     <h1><strong>How to relieve stress effectively</strong></h1>
+     <div>
+      <a href="../entry-2/index.html">Go to ToC</a>
+     </div>
+     <h2>&lt;MEDITATING&gt;</h2>
+     <div>
+      <ol>
+        <li>Find a Quiet Space</li>
+        <li>Sit Down</li>
+        <li>Close your eyes</li>
+        <li>Mindful Observation</li>
+        <li>Be Patient</li>
+       </ol>
+     </div>
+     <div>
+      <a href="https://www.youtube.com/watch?v=CoQtaW0BpDY"><img src="../assets/plane-emoji-1.png"></a>
+     </div>
+     <div>
+      <a href="https://www.youtube.com/watch?v=xNN7iTA57jM"><img src="../assets/plane-emoji-2.png"></a>
+     </div>
+     <div>
+      <a href="https://www.youtube.com/watch?v=XiwOjGBCl7s"><img src="../assets/plane-emoji-3.png"></a>
+     </div>
    </body>
  </html>
