--- a/entry-4/index.html
+++ b/entry-4/index.html
@@ -2,49 +2,122 @@
  <html>
    <head>
      <title>Harmonic Collection Entry 4</title>
-     <link href="../assets/main.css" rel="stylesheet">
+     <link href="../../assets/reset.css" rel="stylesheet" type="text/css">
+     <link href="../../assets/main.css" rel="stylesheet">
+     <style>
+      body {
+        color: navy;
+        background-image: url(../assets/songs-background.png);
+      }
+      h1 {
+        background-color: skyblue;
+        font-size: 55px;
+        border: double 10px;
+      }
+      div:nth-child(2) {
+        background-color: skyblue;
+        top: auto;
+        bottom: 10px;
+        right: 10px
+      }
+      div:nth-child(3) {
+        color: white;
+        text-align: right;
+        font-size: larger;
+      }
+      div:nth-child(3) aside{
+        float: right;
+        margin: 0px;
+        padding: 0px;
+        border: solid white 1px;
+        background-color: navy;
+        padding: 0px 5px;
+      }
+      #spotify-link {
+        color: white;
+      }
+      div:nth-child(4) {
+        position: absolute;
+        top: 200px;
+        left: 120px;
+        width: 100px;
+        height: 76px;
+      }
+      div:nth-child(5) {
+        position: absolute;
+        top: 130px;
+        left: 300px;
+        width: 100px;
+        height: 76px;
+      }
+      div:nth-child(6) {
+        position: absolute;
+        top: 200px;
+        right: 100px;
+        width: 100px;
+        height: 76px;
+      }
+      div:nth-child(7) {
+        position: absolute;
+        bottom: 300px;
+        right: 30px;
+        width: 100px;
+        height: 76px;
+      }
+      div:nth-child(8) {
+        position: absolute;
+        bottom: 150px;
+        right: 450px;
+        width: 100px;
+        height: 76px;
+      }
+      div:nth-child(9) {
+        position: absolute;
+        bottom: 100px;
+        left: 500px;
+        width: 100px;
+        height: 76px;
+      }
+      div:nth-child(10) {
+        position: absolute;
+        bottom: 250px;
+        left: 250px;
+        width: 100px;
+        height: 76px;
+      }
+     </style>
    </head>
    <body>
-     <h1><strong>Ways to Improve Quality of Life</strong> <small>by Evelyn Yoon</small></h1>
-
-     <h3>Welcome to my website!</h3><br>
+     <h1>Song that are good to listen to while working out</h1>
      
-     <h2>About the Project</h2>
-     <p>My harmonic collection!</p>
-
-     <details>
-      <summary>Expand</summary>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../entry-1/index.html">Entry 1</a></li>
-        <li><a href="../entry-2/index.html">Entry 2</a></li>
-        <li><a href="../entry-3/index.html">Entry 3</a></li>
-        <li><a href="./index.html">Entry 4</a></li>
-      </ul>
-     </details>
-     <br><br><br>
-
-     <h2>Collections</h2>
-
-     <ul>
-      <li><a href="how-to-relieve-stress-effectively/index.html">How to relieve stress effectively</a></li> <!-- list item-->
-      <li><a href="song/index.html">Songs that are good to listen to while working out</a></li>
-      <li><a href="healthy-habits/index.html">Healthy Habits</a></li>
-     </ul>
-
-     <br><br><br><hr>
-
-
-     <h3 style="font-family: 'Times New Roman', Times, serif;">What's on your mind?</h3>
-     <form action="/action_page.php">
-      <label for="thought"></label>
-      <input type="text" id="thought" name="thought"><br><br>
-      <input type="submit" value="Submit">
-    </form>
-
-     <footer>
-        <p>&copy; 2023 Harmonic Collection</p>
-        <p>Core 1: Interaction</p>
-     </footer>
+     <div>
+      <a href="../entry-2/index.html">Go to ToC</a>
+     </div>
+     <div>
+      Are you looking for different music than what's here?<br>
+      Click here to explore!
+      <aside><a id="spotify-link" href="https://open.spotify.com/">Click Me!!</a></aside>
+     </div>
+     <div>
+      <a href="https://www.youtube.com/watch?v=ErmgY5GX_wI"><img src="../assets/cursor1.png"></a>
+     </div>
+     <div>
+      <a href="https://www.youtube.com/watch?v=czMafSwxalM"><img src="../assets/cursor2.png"></a>
+     </div>
+     <div>
+      <a href="https://www.youtube.com/watch?v=06k5XN78OP0"><img src="../assets/cursor3.png"></a>
+     </div>
+     <div>
+      <a href="https://www.youtube.com/watch?v=wKyMIrBClYw"><img src="../assets/cursor4.png"></a>
+     </div>
+     <div>
+      <a href="https://www.youtube.com/watch?v=VaKzNtwPQxE"><img src="../assets/cursor5.png"></a>
+     </div>
+     <div>
+      <a href="https://www.youtube.com/watch?v=sRJ4RywOPvA"><img src="../assets/cursor6.png"></a>
+     </div>
+     <div>
+      <a href="https://www.youtube.com/watch?v=VF-r5TtlT9w"><img src="../assets/cursor7.png"></a>
+     </div>
    </body>
  </html>
