--- a/entry-5/index.html
+++ b/entry-5/index.html
@@ -2,51 +2,125 @@
  <html>
    <head>
      <title>Harmonic Collection Entry 5</title>
-     <link href="../assets/main.css" rel="stylesheet">
+     <link href="../../assets/reset.css" rel="stylesheet" type="text/css">
+     <link href="../../assets/main.css" rel="stylesheet">
+     <style>
+      body {
+        color: orange;
+        background-image: url(../assets/healthy-food-background.png);
+      }
+      h1 {
+        border-style: none;
+        padding: 0;
+        text-align: left;
+        padding-left: 20px;
+      }
+      .description {
+        border: solid orange 2px;
+        background-color: lightyellow;
+        padding: 2px;
+        word-wrap: normal;
+        font-size: 12px;
+        color: black;
+      }
+      /* div:nth-child(2) {
+        background-color: skyblue;
+        top: auto;
+        bottom: 10px;
+        right: 10px
+      } */
+      div:nth-child(3) {
+        position: absolute;
+        height: 160px;
+        width: 230px;
+        top: 70px;
+        right: 100px;
+      }
+      div:nth-child(4) {
+        position: absolute;
+        top: 250px;
+        right: 10px;
+        width: 450px;
+      }
+      div:nth-child(5) {
+        position: absolute;
+        height: 400px;
+        width: 230px;
+        top: 160px;
+        left: 470px;
+      }
+      div:nth-child(6) {
+        position: absolute;
+        bottom: 200px;
+        left: 120px;
+        width: 250px;
+      }
+      div:nth-child(7) {
+        position: absolute;
+        height: 200px;
+        width: 230px;
+        top: 180px;
+        right: 460px;
+      }
+      div:nth-child(8) {
+        position: absolute;
+        top: 370px;
+        right: 150px;
+        width: 250px;
+      }
+      div:nth-child(9) {
+        position: absolute;
+        height: 190px;
+        width: 220px;
+        bottom: 190px;
+        right: 470px;
+      }
+      div:nth-child(10) {
+        position: absolute;
+        bottom: 150px;
+        right: 200px;
+        width: 250px;
+      }
+      @media (hover: hover) {
+        .description {
+          visibility: hidden;
+        }
+        .container:hover + .description {
+          visibility: visible;
+        }
+      }
+     </style>
    </head>
    <body>
-     <h1><strong>Ways to Improve Quality of Life</strong> <small>by Evelyn Yoon</small></h1>
-     <h4>Entry 5</h4>
+     <h1><strong>Healthy Habits</strong></h1>
+     <h2>&lt;Balanced diet&gt;</h2>
 
-     <h3>Welcome to my website!</h3><br>
-     
-     <h2>About the Project</h2>
-     <p>My harmonic collection!</p>
+     <div class="container"></div>
+     <div class="description">
+      <font size="+1">Dairy</font>
+      <br>
+      Milk is essential for both health and muscle development as it provide a rich source of calcium and protein.
+     </div>
 
-     <details>
-      <summary>Expand</summary>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../entry-1/index.html">Entry 1</a></li>
-        <li><a href="../entry-2/index.html">Entry 2</a></li>
-        <li><a href="../entry-3/index.html">Entry 3</a></li>
-        <li><a href="../entry-4/index.html">Entry 4</a></li>
-        <li><a href="./index.html">Entry 5</a></li>
-      </ul>
-     </details>
-     <br><br><br>
+     <div class="container"></div>
+     <div class="description">
+      <font size="+1">Fruits and vegetables</font>
+      <br>
+      Fruits and vegetables provide a wide range of nutrients such as minerals, vitamins, dietary fiber, antioxidants, strengthening the immune system and protecting the body. They also reduce the risk of chronic diseases like heart disease, obesity, and diabetes, and improve digestion by enhancing digestive function. For these reasons, fruits and vegetables play a crucial role in a balanced diet.
+    </div>
 
-     <h2>Collections</h2>
+    <div class="container"></div>
+     <div class="description">
+      <font size="+1">Carbohydrates</font>
+      <br>
+      Carbohydrates are essential in a balanced diet because they provide energy, support brain funciton, promote digestive health, enhance exercise performance, and help regulate bodily functions.
+    </div>
 
-     <ul>
-      <li><a href="how-to-relieve-stress-effectively/index.html">How to relieve stress effectively</a></li> <!-- list item-->
-      <li><a href="song/index.html">Songs that are good to listen to while working out</a></li>
-      <li><a href="healthy-habits/index.html">Healthy Habits</a></li>
-     </ul>
-
-     <br><br><br><hr>
-
-
-     <h3 style="font-family: 'Times New Roman', Times, serif;">What's on your mind?</h3>
-     <form action="/action_page.php">
-      <label for="thought"></label>
-      <input type="text" id="thought" name="thought"><br><br>
-      <input type="submit" value="Submit">
-    </form>
-
-     <footer>
-        <p>&copy; 2023 Harmonic Collection</p>
-        <p>Core 1: Interaction</p>
-     </footer>
+    <div class="container"></div>
+     <div class="description">
+      <font size="+1">Protein</font>
+      <br>
+      In a balanced diet, protein is crucial for muscle development, tissue repair, and maintaining a healthy immune system. It also aids in providing energy and satiety.
+     </div>
    </body>
  </html>
