--- a/entry-1/index.html
+++ b/entry-1/index.html
@@ -2,41 +2,40 @@
  <html>
    <head>
      <title>Harmonic Collection Entry 1</title>
+     <link href="../assets/main.css" rel="stylesheet">
+     <style>
+      body {
+        background-size: cover;
+        color: blue;
+      }
+      div:nth-child(2) {
+        border: solid blue 4px;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        font-size: 30px;
+        padding: 10px 30px;
+        z-index: 1;
+      }
+     </style>
    </head>
-   <body>
-    <!-- 
-        In this collection, the first topic, "How to relieve stress effectively," addresses how people nowadays face a lot of stress in their lives due to various factors. Through this topic, I aim to provide people with simple and effective ways to reduce stress. So, I will introduce several methods to reduce stress, displaying only the keywords on the website initially. When users click on these keywords, detailed explanations will be provided.
-        The next topic is "Songs that are good to listen to while working out." I usually enjoy exercising while listening to music. I find that my choice of music varies depending on my mood, and searching for suitable songs every time can be quite challenging. Therefore, I want to create a website where users can easily access different playlists based on their mood for that day.
-        The final topic is "Healthy habits." I want to present easily understandable information about common healthy habits that people can incorporate into their daily lives. Health is a trending topic nowadays, and given our busy routines, people need straightforward and accessible information on adopting healthy habits. I plan to create a website with icons or keywords that users can click on to access detailed information.
-    -->
-     <h1>Ways to Improve Quality of Life</h1>
-     <h2><em>by Evelyn Yoon</em></h2>
+   <body background="../assets/Sea.jpg">
+     <h1 style="color: blue; text-align: center">Welcome to my Website!</h1>
 
-     <h3>Welcome to my website!</h3><br>
-     
-     <h2>About the Project</h2>
-     <p>My harmonic collection!</p><br>
+     <div>
+      <a href="../entry-2/index.html">HOME</a>
+     </div>
+     <h2 style="color: blue; text-align: center"><em>by Evelyn Yoon</em></h2>
+     <br><br><br>
 
-     <h2>Collections</h2>
-     <ul>
-      <li>How to relieve stress effectively</li>
-      <li>Songs that are good to listen to while working out</li>
-      <li>Healthy Habits</li>
-     </ul>
+     <h2 style="color: blue; text-align: center">We are delighted to have you on our website. <br>
+      This is a place dedicated to providing a wealth of information <br>
+      and various methods to enhance your quality of life. <br>
+      Our goal is to assist you in living a healthier and happier life.</h3><br>
 
-     <hr>
-
-
-     <h3>What's on your mind?</h3>
-     <form action="/action_page.php">
-      <label for="thought"></label>
-      <input type="text" id="thought" name="thought"><br><br>
-      <input type="submit" value="Submit">
-    </form>
 
      <footer>
         <p>&copy; 2023 Harmonic Collection</p>
-        <p>Core 1: Interaction</p>
      </footer>
    </body>
  </html>
