--- a/entry-2/index.html
+++ b/entry-2/index.html
@@ -1,58 +1,104 @@
 <!DOCTYPE html>
  <html>
    <head>
-     <title>Harmonic Collection Entry 2</title>
-     <link href="../assets/main.css" rel="stylesheet">
-   </head>
-   <body>
-    <!-- 
-        In this collection, the first topic, "How to relieve stress effectively," addresses how people nowadays face a lot of stress in their lives due to various factors. Through this topic, I aim to provide people with simple and effective ways to reduce stress. So, I will introduce several methods to reduce stress, displaying only the keywords on the website initially. When users click on these keywords, detailed explanations will be provided.
-        The next topic is "Songs that are good to listen to while working out." I usually enjoy exercising while listening to music. I find that my choice of music varies depending on my mood, and searching for suitable songs every time can be quite challenging. Therefore, I want to create a website where users can easily access different playlists based on their mood for that day.
-        The final topic is "Healthy habits." I want to present easily understandable information about common healthy habits that people can incorporate into their daily lives. Health is a trending topic nowadays, and given our busy routines, people need straightforward and accessible information on adopting healthy habits. I plan to create a website with icons or keywords that users can click on to access detailed information.
-    -->
-     <h1><strong>Ways to Improve Quality of Life</strong> <small>by Evelyn Yoon</small></h1>
-
-     <h3>Welcome to my website!</h3><br>
-     
-     <h2>About the Project</h2>
-     <p>My harmonic collection!</p>
-
-     <details>
-      <summary>Expand</summary>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../entry-1/index.html">Entry 1</a></li>
-        <li><a href="../entry-2/index.html">Entry 2</a></li>
-      </ul>
-     </details>
-     <br><br><br>
-
-     <h2>Collections</h2>
+     <title>Harmonic Collection HomePage</title>
+     <link href="../../assets/reset.css" rel="stylesheet" type="text/css">
+     <link href="../../assets/main.css" rel="stylesheet">
      <style>
-      ul {
-          list-style-image: url('heart-emoji.png');
+      body {
+        background-color: plum;
+        color: purple;
+      }
+      h1 {
+        font-size: 60px;
+        border: none;
+      }
+      div {
+        max-height: 200px;
+        max-width: 200px;
+      }
+      img {
+        width: 100%;
+        height: 100%;
+      }
+      div:nth-child(2) {
+        top: 20px;
+        left: 20px;
+        padding: 10px 30px;
+        z-index: 0;
+      }
+      div:nth-child(3) {
+        position: absolute;
+        top: 100px;
+        left: 420px;
+      }
+      div:nth-child(4) {
+        position: absolute;
+        bottom: 90px;
+        left: 150px;
+      }
+      div:nth-child(5) {
+        position: absolute;
+        top: 150px;
+        left: 80px;
+      }
+      div:nth-child(6) {
+        position: absolute;
+        top: 350px;
+        left: 480px;
+      }
+      div:nth-child(7) {
+        position: absolute;
+        top: 220px;
+        right: 380px;
+      }
+      div:nth-child(8) {
+        position: absolute;
+        top: 120px;
+        right: 50px;
+      }
+      div:nth-child(9) {
+        position: absolute;
+        bottom: 50px;
+        right: 460px;
+      }
+      div:nth-child(10) {
+        position: absolute;
+        bottom: 150px;
+        right: 80px;
       }
      </style>
+   </head>
+   <body>
+     <h1>Ways to Improve Quality of Life</h1>
 
-     <ul>
-      <li><a href="c1.html">How to relieve stress effectively</a></li> <!-- list item-->
-      <li><a href="c2.html">Songs that are good to listen to while working out</a></li>
-      <li><a href="c3.html">Healthy Habits</a></li>
-     </ul>
+     <div>
+      <a href="../entry-1/index.html">BACK</a>
+     </div>
 
-     <br><br><br><hr>
-
-
-     <h3 style="font-family: 'Times New Roman', Times, serif;">What's on your mind?</h3>
-     <form action="/action_page.php">
-      <label for="thought"></label>
-      <input type="text" id="thought" name="thought"><br><br>
-      <input type="submit" value="Submit">
-    </form>
-
-     <footer>
-        <p>&copy; 2023 Harmonic Collection</p>
-        <p>Core 1: Interaction</p>
-     </footer>
+     <div>
+      <a href="../entry-1/index.html"><img src="../assets/Empty-Entry.png"></a>
+     </div>
+     <div>
+      <a href="index.html"><img src="../assets/Empty-Entry.png"></a>
+     </div>
+     <div>
+      <a href="../entry-3/index.html"><img src="../assets/Entry3-icon.png"></a>
+     </div>
+     <div>
+      <a href="../entry-4/index.html"><img src="../assets/Entry4-icon.png"></a>
+     </div>
+     <div>
+      <a href="../entry-5/index.html"><img src="../assets/Entry5-icon.png"></a>
+     </div>
+     <div>
+      <a><img src="../assets/Empty-Entry.png"></a>
+     </div>
+     <div>
+      <a><img src="../assets/Empty-Entry.png"></a>
+     </div>
+     <div>
+      <a><img src="../assets/Empty-Entry.png"></a>
+     </div>
    </body>
  </html>
