--- a/entry-4/index.html
+++ b/entry-4/index.html
@@ -2,8 +2,8 @@
  <html>
    <head>
      <title>Harmonic Collection Entry 4</title>
-     <link href="../../assets/reset.css" rel="stylesheet" type="text/css">
-     <link href="../../assets/main.css" rel="stylesheet">
+     <link href="../assets/reset.css" rel="stylesheet" type="text/css">
+     <link href="../assets/main.css" rel="stylesheet">
      <style>
       body {
         color: navy;
