--- a/entry-2/index.html
+++ b/entry-2/index.html
@@ -2,8 +2,8 @@
  <html>
    <head>
      <title>Harmonic Collection HomePage</title>
-     <link href="../../assets/reset.css" rel="stylesheet" type="text/css">
-     <link href="../../assets/main.css" rel="stylesheet">
+     <link href="../assets/reset.css" rel="stylesheet" type="text/css">
+     <link href="../assets/main.css" rel="stylesheet">
      <style>
       body {
         background-color: plum;
@@ -21,7 +21,7 @@
         width: 100%;
         height: 100%;
       }
-      div:nth-child(2) {
+      .toc {
         top: 20px;
         left: 20px;
         padding: 10px 30px;
@@ -72,15 +72,15 @@
    <body>
      <h1>Ways to Improve Quality of Life</h1>
 
-     <div>
+     <div class="toc">
       <a href="../entry-1/index.html">BACK</a>
      </div>
 
      <div>
-      <a href="../entry-1/index.html"><img src="../assets/Empty-Entry.png"></a>
+      <a><img src="../assets/Empty-Entry.png"></a>
      </div>
      <div>
-      <a href="index.html"><img src="../assets/Empty-Entry.png"></a>
+      <a href="../entry-6/index.html"><img src="../assets/Entry6-icon.png"></a>
      </div>
      <div>
       <a href="../entry-3/index.html"><img src="../assets/Entry3-icon.png"></a>
