--- a/entry-3/index.html
+++ b/entry-3/index.html
@@ -59,7 +59,7 @@
    </head>
    <body>
      <h1><strong>How to relieve stress effectively</strong></h1>
-     <div>
+     <div class="toc">
       <a href="../entry-2/index.html">Go to ToC</a>
      </div>
      <h2>&lt;MEDITATING&gt;</h2>
