--- a/entry-4/index.html
+++ b/entry-4/index.html
@@ -90,7 +90,7 @@
    <body>
      <h1>Song that are good to listen to while working out</h1>
      
-     <div>
+     <div class="toc">
       <a href="../entry-2/index.html">Go to ToC</a>
      </div>
      <div>
